base/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /readyz
              port: 8000
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
