base/redis_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
      containers:
        - name: redis
          image: redis
          resources:
            requests:
              cpu: 30m
              memory: 50Mi
            limits:
              cpu: 60m
              memory: 100Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis
