base/frontend_ingress_sikademo_com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-sikademo-com
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - CHANGE_ME
      secretName: CHANGE_ME-tls
  rules:
    - host: CHANGE_ME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
